# birre

./: .coverage  .editorconfig  .gitignore  .markdownlint.json  .mega-linter.local.yml  .mega-linter.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_FLOW.md  IMPLEMENTATION_TRACKER.md  IMPROVEMENT_PLAN.md  PROJECT_ANALYSIS.md  README.md  SECURITY.md  TODO.md  codecov.yml  config.toml  coverage.json  coverage.xml  list_tools.py  pyproject.toml  pytest.ini  server.py  test_interactive_live.py
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/uv-env/: action.yml
.github/agents/: birre.agent.md  git.agent.md
.github/chatmodes/: git.chatmode.md
.github/instructions/: edit-changelog.instructions.md  edit-python.instructions.md
.github/prompts/: changelog.prompt.md  commit.prompt.md  fix-sonarqube-findings.prompt.md  release.prompt.md  selftest.prompt.md
.github/workflows/: build-sign-publish.yml  codacy.yml  codecov.yml  continuous-integration.yml  cross-platform.yml  dependency-review.yml  lint-and-test.yml  megalinter.yml  pr-validation.yml  release.yml  scorecard.yml  sonarcloud.yml  tests.yml
.project-notes/: IMPLEMENTATION_SUMMARY_CI001_TD001.md  IMPLEMENTATION_SUMMARY_PKG001.md  IMPLEMENTATION_TRACKER.md
apis/: bitsight.v1.overview.md  bitsight.v2.overview.md  bitsight.v2.schema.json
apis/v1/: info.json  x-common-definitions.json
apis/v1/components/: responses.json
apis/v1/paths/: a.json  b.json  d.json  i.json  j.json  k.json  m.json  n.json  p.json  u.json
apis/v2/: info.json  security.json  servers.json  tags.json
apis/v2/components/: parameters.json  schemas.json
apis/v2/components/paths/: alerts.json  users.json
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  CHANGELOG_STANDARDS.md  CLI.md  RELEASING.md  REQUIREMENTS.md  ROADMAP.md  SECURITY_VERIFICATION.md  STATUS.md
docs/apis/v1/: security.json  servers.json  tags.json
docs/apis/v1/components/: parameters.json  schemas.json  securitySchemes.json
docs/apis/v1/paths/: c.json  e.json  f.json  g.json  l.json  o.json  r.json  s.json  t.json  v.json
docs/apis/v2/: x-common-definitions.json
docs/apis/v2/components/: responses.json
docs/apis/v2/components/paths/: company_requests.json  financial_quantification.json  portfolio.json
src/: __init__.py  birre.py  config.py  constants.py  errors.py  logging.py  settings.py  startup_checks.py
src/apis/: __init__.py  clients.py  v1_bridge.py
src/birre/: __init__.py  mcp_metadata.json
src/birre/application/: diagnostics.py  offline_samples.py  server.py  startup.py
src/birre/cli/: __init__.py  app.py  formatting.py  helpers.py  invocation.py  main.py  options.py  runtime.py  sync_bridge.py  validation.py
src/birre/cli/commands/: __init__.py  config.py  logs.py  run.py
src/birre/cli/commands/selftest/: __init__.py  command.py  models.py  rendering.py  runner.py
src/birre/cli/options/: __init__.py
src/birre/config/: settings.py
src/birre/domain/: selftest_models.py  subscription.py
src/birre/domain/company_rating/: service.py
src/birre/domain/company_search/: service.py
src/birre/domain/folders/: utils.py
src/birre/domain/risk_manager/: service.py
src/birre/infrastructure/: errors.py  logging.py
src/birre/integrations/bitsight/: client.py  v1_bridge.py
src/birre/resources/: __init__.py
src/birre/resources/apis/: bitsight.v1.schema.json
src/birre/utils/: __init__.py
src/business/: __init__.py  company_rating.py  company_search.py  risk_manager.py
src/business/helpers/: __init__.py  subscription.py
tests/: conftest.py
tests/benchmarks/: test_performance.py
tests/cli/: test_cli_app_commands.py  test_cli_main.py  test_run_command.py
tests/integration/: test_birre_online.py  test_error_scenarios.py  test_online_checks.py  test_risk_manager_online.py
tests/live/: test_birre_live.py  test_online_checks.py
tests/unit/: conftest.py  test_api_spec_normalization.py  test_birre_server.py  test_bitsight_v1_bridge.py  test_company_rating_endpoints.py  test_company_rating_helpers.py  test_company_rating_helpers_more.py  test_company_rating_more.py  test_company_rating_selection.py  test_company_rating_service_helpers.py  test_company_rating_summaries.py  test_company_search_service.py  test_config_commands_helpers.py  test_config_runtime.py  test_constants.py  test_logging.py  test_logging_formatters.py  test_logs_additional.py  test_logs_errors.py  test_logs_more_edges.py  test_logs_params_more.py  test_logs_parsers_and_cmds.py  test_properties.py  test_resources_init.py  test_risk_manager_helpers.py  test_risk_manager_service_helpers.py  test_risk_manager_tools.py  test_selftest_runner_helpers.py  test_server_cli.py  test_settings.py  test_standard_tools.py  test_startup_checks.py  test_subscription_helpers.py  test_subscription_internals.py  test_sync_bridge.py  test_sync_bridge_extra.py  test_sync_bridge_more.py  test_sync_bridge_pending_close.py  test_tls_errors.py  test_v1_bridge.py  (+1 more)
tests/unit/diagnostics/: test_diagnostics_context.py  test_diagnostics_core.py  test_diagnostics_runtime.py  test_diagnostics_tools.py
