[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BiRRe"
version = "3.0.0"
description = "Model Context Protocol server for BitSight security ratings"
license = "Unlicense"
license-files = ["LICENSE"]
authors = [{ name = "boecht" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "mcp",
    "model-context-protocol",
    "bitsight",
    "security-ratings",
    "cybersecurity",
    "risk-management",
    "fastmcp",
    "llm-tools",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Security",
    "Topic :: Security :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastMCP",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastmcp>=2.13.0,<2.14",
    "dynaconf>=3.2.3,<4",
    "pydantic>=2.6.0,<3",
    "python-dotenv>=1.0.0,<2",
    "httpx>=0.27.0,<0.29",
    "prance>=23.6.7",
    "openapi-spec-validator>=0.7.1,<0.8",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "typing_extensions>=4.9.0",
    "structlog>=24.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "types-pyyaml>=6.0.12",
    "ruff>=0.8.0",
]

[project.optional-dependencies]
pytest-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
birre = "birre.cli.main:main"

[project.entry-points."mcp.servers"]
birre = "birre:create_birre_server"

[project.urls]
repository = "https://github.com/boecht/birre"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
ignore = []
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.setuptools.package-data]
"birre.resources" = ["apis/**/*.json"]
"birre" = ["py.typed", "mcp_metadata.json"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["birre*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "dynaconf",
    "dynaconf.*",
    "prance",
    "prance.*",
]
ignore_missing_imports = true
