[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BiRRe"
version = "4.1.0"
description = "Model Context Protocol server for BitSight security ratings"
readme = "README.md"
requires-python = ">=3.14.4"
license = "Unlicense"
license-files = ["LICENSE"]
authors = [{ name = "boecht" }]
keywords = [
  "bitsight",
  "cybersecurity",
  "fastmcp",
  "llm-tools",
  "mcp",
  "model-context-protocol",
  "risk-management",
  "security-ratings",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Plugins",
  "Framework :: AsyncIO",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  "dynaconf>=3.2.13,<4",
  "fastmcp>=3.2.4,<4",
  "httpx>=0.28.1,<0.29",
  "openapi-spec-validator>=0.8.5,<0.9",
  "prance>=25.4.8.0",
  "pydantic>=2.13.3,<3",
  "python-dotenv>=1.2.2,<2",
  "rich>=15.0.0",
  "structlog>=25.5.0",
  "typer>=0.25.1",
  "typing_extensions>=4.15.0",
]

[project.optional-dependencies]
pytest-dependencies = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
]

[project.scripts]
birre = "birre.cli.main:main"

[project.urls]
repository = "https://github.com/boecht/birre"

[project.entry-points."mcp.servers"]
birre = "birre:create_birre_server"

[dependency-groups]
dev = [
  "cyclonedx-bom>=7.3.0",
  "hypothesis>=6.152.4",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-benchmark>=5.2.3",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.12",
  "pyright>=1.1.409",
  "types-pyyaml>=6.0.12.20260408",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard" # "off" | "basic" | "standard" | "strict"
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
ignore = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
  ".venv/",
  "BiRRe.egg-info",
  "dist/",
  "docs/apis/",
  "src/birre/resources/apis/",
  "scripts/",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
  "C90", # mccabe complexity
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["birre*"]

[tool.setuptools.package-data]
"birre" = ["py.typed", "mcp_metadata.json"]
"birre.resources" = ["apis/**/*.json"]
